# bangumi

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml  build-docs.yml  build.yml
android/: build.gradle.kts
android/keystore/: encryption_public_key.pem
app/: build.gradle.kts  google-services.json  proguard-keys.txt  proguard-rules.pro
baselineprofile/: build.gradle.kts
buildSrc/: build.gradle.kts  settings.gradle.kts
composeApp/: build.gradle.kts  proguard.pro
gradle/: libs.versions.toml
iosApp/: ExportOptions.plist  Podfile
iosApp/Live2DSDK/Rendering/: CMakeLists.txt  CubismClippingManager.hpp  CubismClippingManager.tpp  CubismRenderer.cpp  CubismRenderer.hpp
iosApp/Live2DSDK/Rendering/Metal/: CMakeLists.txt  CubismCommandBuffer_Metal.hpp  CubismCommandBuffer_Metal.mm  CubismOffscreenSurface_Metal.hpp  CubismOffscreenSurface_Metal.mm  CubismRenderer_Metal.hpp  CubismRenderer_Metal.mm  CubismRenderingInstanceSingleton_Metal.h  CubismRenderingInstanceSingleton_Metal.m  CubismShader_Metal.hpp  CubismShader_Metal.mm  MetalShaderTypes.h  MetalShaders.metal
keystore/: bangumi.keystore  key.sh  why.keystore
lib-common/: build.gradle.kts
lib-doc/: redirection-rules.xml  writerside.cfg  xiaoyv.tree
lib-emoji/: build.gradle.kts
lib-h5/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
lib-i18n/: build.gradle.kts
lib-live2d/: build.gradle.kts
lib-script/: .gitignore  build.gradle.kts
lib-subtitle/: build.gradle.kts
lib-thunder/: build.gradle.kts
(+3232 files in other folders)
